home funcionando, prismic configurado, carregando mais posts

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,68 @@
-// TODO
+.container {
+  background: var(--background);
+}
+
+.content {
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 1.5rem 0 5rem 0;
+
+  .posts {
+
+    a {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+  
+      > h2 {
+        font: 700 1.75rem 'Inter', sans-serif;
+        color: var(--heading);
+
+        transition: color 0.2s;
+      }
+  
+      > span {
+        font: 400 1.125rem 'Inter', sans-serif;
+      }
+  
+      > div {
+        margin-top: 1rem;
+        display: flex;
+        gap: 1.5rem;
+        align-items: center;
+  
+        > div {
+          display: flex;
+          gap: 0.5rem;
+        }
+  
+        .date, .author {
+          span {
+            font: 400 0.875rem 'Inter', sans-serif;
+          }
+        }
+      }
+  
+      & + a {
+        margin-top: 3rem;
+      }
+
+      &:hover h2 {
+        color: var(--highlight);
+      }
+    }
+  }
+
+  .loadMore {
+    margin-top: 4rem;
+    font: 600 1.125rem 'Inter', sans-serif;
+    color: var(--highlight);
+  
+    transition: filter 0.2s;
+  
+    &:hover {
+      filter: brightness(1.15);
+    }
+  }
+}
+
