--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,11 @@
-// TODO
+.container {
+  height: 6.5625rem;
+  padding: 1.5rem 0 6rem 0;
+}
+
+.headerContent {
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 2.5rem 0;
+}
+
