--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -34,6 +34,7 @@
         > div {
           display: flex;
           gap: 0.5rem;
+          align-items: center;
         }
   
         .date, .author {
